Finish command refactoring